[package]
name = "rucola"
version = "0.1.1"
authors = ["Federico Morrone <contact@morrone.dev>"]
edition = "2018"
license = "MIT"
description = "Reddi api wrapper"
documentation = "https://docs.rs/rucola/"
repository = "https://github.com/morr0ne/rucola"
homepage = "https://github.com/morr0ne/rucola"

[features]
default = ["debug_attr"]

debug_attr = []
deny_unknown_fields = []
serialize = []

[dependencies]
anyhow = "1.0.38"
enum-as-inner = "0.3.3"
reqwest = { version = "0.11.1", features = ["json"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.63"
# tokio = { version = "1.2.0", features = ["full"]}
